# jcb

./: .gitignore  .gitmodules  README.md  get_submod_path.py  jcb_apps.yaml  jcb_client_init.py  jcb_client_path.py  jcb_clients.yaml  jcb_init.py  pycodestyle.cfg  pycodestyle_run.py  setup.cfg
.github/workflows/: basic_testing.yaml  coding_norms.yaml  unit_tests.yaml
src/jcb/: __init__.py  driver.py  jcb.py  jcb_entry.py  renderer.py  utils.py
src/jcb/configuration/algoithms/: hofx4d.yaml
src/jcb/configuration/algorithms/: 3dvar.yaml  3dvar.yaml.j2  hofx3d.yaml  hofx3d.yaml.j2  hofx4d.yaml  hofx4d.yaml.j2  local_ensemble_da.yaml  local_ensemble_da.yaml.j2  observer_components.yaml  test_obs_filters.yaml  test_obs_filters.yaml.j2
src/jcb/configuration/apps/: README.md
src/jcb/observation_chronicle/: observation_chronicle.py  satellite_chronicle.py
src/jcb/utilities/: config_parsing.py  parse_channels.py  testing.py  trapping.py
test/: test_client_calls.py
test/client_integration/: gdas-atmosphere-templates.yaml  gdas-marine-templates.yaml  gdas-templates.yaml  test_client_calls.py  test_client_requirements.py  test_client_yaml_requirements.py
test/observation_chronicles/: test_satellite_processing.py
test/parse_channels/: test_parse_channels.py
test/test-files/: gdas-templates.yaml
