[metadata]
name = jcb
version = attr: jcb.__version__
description = JEDI Configuration Builder
long_description = file: README.md
long_description_content_type = text/markdown
author = JCSDA, NOAA, NASA
keywords = JEDI, JCSDA, NOAA, NASA
home_page = https://github.com/danholdaway/jcb

[options]
zip_safe = False
include_package_data = True
package_dir =
  =src
packages = find_namespace:
python_requires = >= 3.6
setup_requires =
  setuptools
install_requires =
  PyYAML>=6.0
  Jinja2>=3.1.2
tests_require =
  pytest, pytest-cov, isort, pycodestyle

[options.packages.find]
where=src

[options.package_data]
* = *.yaml, *.md

[options.extras_require]
dev = pytest>=7; pytest-cov>=3; isort>=5; pycodestyle>=2; pre-commit>=2; tox>=3

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[tool:pytest]
addopts = --cov=wxflow --cov-report=term-missing --cov-report=xml --cov-report=html

[tool:pycodestyle]
exclude = .git,.github,venv,.vscode,docs/conf.py
max-line-length = 160
