[metadata]
name = jcb
version = attr: jcb.__version__
description = JEDI Configuration Builder
long_description = file: README.md
long_description_content_type = text/markdown
author = NOAA, NASA, JCSDA
keywords = JEDI, JCSDA, NOAA, NASA
home_page = https://github.com/NOAA-EMC/jcb

[options]
zip_safe = False
include_package_data = True
package_dir =
  =src
packages = find_namespace:
python_requires = >= 3.6
setup_requires =
  setuptools
install_requires =
  PyYAML>=6.0
  Jinja2>=3.1.2
  click>=8.0
tests_require =
  pytest, pytest-cov, isort, pycodestyle

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    jcb = jcb.jcb_entry:main

[options.package_data]
* = *.yaml, *.md
