[metadata]
name = jcb
version = attr: jcb.__version__
description = JEDI Configuration Builder
long_description = file: README.md
long_description_content_type = text/markdown
author = NOAA, NASA, JCSDA
keywords = JEDI, JCSDA, NOAA, NASA
home_page = https://github.com/NOAA-EMC/jcb

[options]
zip_safe = False
include_package_data = True
package_dir =
  =src
packages = find_namespace:
python_requires = >= 3.6
setup_requires =
  setuptools
install_requires =
  PyYAML>=6.0
  Jinja2>=3.1.2
  click>=8.0
  isodate>=0.6.1
tests_require =
  pytest
  pycodestyle

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    jcb = driver:main

[options.package_data]
* = *.yaml, *.j2

[options.extras_require]
testing =
  pytest>=7
  pycodestyle>=2

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

#[tool:pytest]
#addopts = --cov=jcb --cov-report=term-missing --cov-report=html

[tool:pycodestyle]
exclude = .git,.github,venv,.vscode
max-line-length = 160
